menambahkan banyak tools

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div class="chat">
+      <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="4aacf57f-3f7a-4448-b411-85198dbda361";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
